deployments/pi4-01/zigbee2mqtt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
spec:
  selector: {}
  serviceName: zigbee2mqtt
  replicas: 1
  template:
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:1.31.2
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: serial
              mountPath: /dev/ttyAMA0
      volumes:
        - name: serial
          hostPath:
            path: /dev/ttyAMA0
            type: CharDevice
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
