deployments/pi4-01/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector: {}
  ports:
  - port: 80
    name: http
    targetPort: http
