deployments/pi4-01/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  labels:
    external-dns: local-dns
  annotations:
    cert-manager.io/cluster-issuer: le-yrf-me
spec:
  ingressClassName: traefik-internal
  rules:
  - host: z2m.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zigbee2mqtt
            port: 
              name: http
  tls:
  - hosts:
    - z2m.services.home.yrf.me
    secretName: z2m.services.home.yrf.me-tls
